--- a/index.html
+++ b/index.html
@@ -11,11 +11,24 @@
 
 <body>
     <header class="cabeçalho">
+        <div class="container">
+            <input type="checkbox" id="menu" class="container_botao"/>
+            <label for="menu"></label>
+            <ul class="lista-menu"></ul>
+            <li class="lista-menu_titulo"> Categorias </li>
+            <li class="lista-menu_item"></li>
+            <li class="lista-menu_item"></li>
+            <li class="lista-menu_item"></li>
+            <li class="lista-menu_item"></li>
+            <li class="lista-menu_item"></li>
         <span class="cabeçalho_menu-hamburguer"></span>
         <img src="img/Logo.svg" alt="Logo da AluraBooks">
+    
         <a href="#"><img src="img/Favoritos.svg" alt="Favoritos"></a>
         <a href="#"><img src="img/Compras.svg" alt="Carinho de Compras"></a>
         <a href="#"><img src="img/Usuário.svg" alt="Perfil de Usuário"></a>
+        <a href="#"><img src="img/Menu.svg" alt="menu"></a>
+    </div>
 
     </header>
 
